🐛(StudentMeeting) fix whiteboard layout
The way the whiteboard is displayed (using vh for the dimensions and
calculating width and haight based on aspect ratio) leads to several
problem. First the image resizes in strange way when the window is
resize but mostly the buttons are overflowing when displaying two images
duing crops.

I had to change the way images are displayed allowing them
to expand up to the container limit. I also refactored some of the state
to handle the circles creation in the ImageViewer as it was making it
more understandable and was removing one state.

--- a/box-ui/src/components/css/StudentMeeting.css
+++ b/box-ui/src/components/css/StudentMeeting.css
@@ -78,26 +78,34 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    margin: 5px;
 }
 
 .circularProgress {
     position: absolute;
     top: 50%;
-    left: 48%;
+    left: 50%;
     color: blue;
     z-index: 3;
+    transform: translate(-50%, -50%);
 }
 
-.container_loading {
+.containerLoading {
     position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    min-width: 0px;
+    min-height: 0px;
+    margin: 5px;
 }
 
 .containerImgStudent {
     width: 100%;
-    height: 100%;
+    max-height: 48vh;
     background-color: rgb(15, 15, 15);
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 10fr 1fr;
     grid-template-areas: ' . viewer buttons';
 }
 
@@ -106,15 +114,45 @@ button:hover {
     grid-template-areas: 'viewer buttons';
 }
 
+.containerImgStudent.maximize {
+    max-height: 100vh;
+}
+
 .ImageViewer {
     grid-area: viewer;
     place-self: center;
-    place-self: center;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+    min-height: 0px;
+    min-width: 0px;
+    padding: 5px;
 }
 
-.jitsiFloating {
+#croppedImage, #originalImage {
+    max-width: 100%;
+    max-height: 45vh;
+    min-width: 0px;
+    min-height: 0px;
+    object-fit: contain;
+}
+
+#originalImage {
+    border: 2px solid #184777;
+}
+
+.containerImgStudent.maximize #croppedImage, .containerImgStudent.maximize #originalImage {
+    max-height: 100vh;
+}
+
+.containerImgStudent.maximize {
+    height: 100vh;
+}
+
+.jitsiFrame.floating {
     padding: 20px;
     background-color: rgb(25, 25, 25);
 }
